--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
                 </div>
                 <button type="submit" class="btn btn-outline-secondary btn-lg px-4" style="margin-top: -15%;">Submit</button>
               {% if audio %}
-                  <audio  style="margin-left: -130px; margin-top: 25%;" controls>
-                        <source src="../static/sound/test.wav" type="audio/wav">
-                    </audio>
-              {% endif %}
+    <audio style="margin-left: -130px; margin-top: 25%;" controls>
+        <source src="{{ audio }}" type="audio/wav">
+    </audio>
+{% endif %}
 
             </form>
 
